--- a/src/components/layout/MainLayout.module.css
+++ b/src/components/layout/MainLayout.module.css
@@ -1,11 +1,19 @@
 .main {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
 .main__content {
-  height: 93vh;
+  height: 85vh;
+  width: 100%;
+  padding: 0.5rem;
   background: #141d26;
+  position: fixed;
+  overflow: scroll;
+  top: 8vh;
+  left: 0;
 }
