--- a/src/components/layout/UserNavButtons.module.css
+++ b/src/components/layout/UserNavButtons.module.css
@@ -1,16 +1,32 @@
-.button {
+.nav-links {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-links a,
+.nav-links a:link,
+.nav-links a:active {
   width: 25%;
   height: 100%;
-  border: none;
   background: #243447;
   outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
-#active {
-  color: #1da1f2;
-}
-
-.button i {
+.nav-links i {
   font-size: 2.5rem;
-  color: rgb(224, 224, 224);
+  color: #e0e0e0;
+}
+
+.active i {
+  color: #1da1f2;
+  outline: none;
 }
