--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ body {
 html {
   font-size: 62.5%;
 }
+
+/* Removes scrollbar */
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  background: transparent;
+}
