--- a/src/components/feed/Post.module.css
+++ b/src/components/feed/Post.module.css
@@ -1,48 +1,53 @@
 .post-container {
-    display: flex;
-    color: white;
-    font-size: 1.4rem;
-    border-bottom: .15px solid rgba(153, 153, 153, 0.2);
-    padding: 1.25rem;
+  display: flex;
+  color: white;
+  font-size: 1.4rem;
+  border-bottom: 0.15px solid rgba(153, 153, 153, 0.2);
+  padding: 1.25rem 2rem;
 }
 
 .pfp-container {
-    height: 3.85rem;
-    width: 3.85rem;
-    border-radius: 50%;
-    border: 2px solid #e0e0e0;
-    overflow: hidden;
-    margin-right: 1rem;
-  }
-  
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  border: 2px solid #e0e0e0;
+  overflow: hidden;
+  margin-right: 0.75rem;
+}
+
 .pfp-container img {
-    height: 100%;
-    width: 100%;
-  }
+  height: 100%;
+  width: 100%;
+}
 
 .post-content {
-    display: flex;
-    flex-wrap: wrap;
-    flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
 }
 
 .post-interaction {
-    display: flex;
-    align-self: flex-end;
-    width: 90%;
-    margin-top: 5%;
-    justify-content: space-between;
+  display: flex;
+  align-self: flex-end;
+  width: 90%;
+  margin-top: 5%;
+  justify-content: space-between;
 }
 
 .user-post-info {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .user-post-handle {
-    color: #999;
-    font-weight: 300;
+  color: #999;
+  font-weight: 300;
+  margin-left: 0.35rem;
 }
 
 .post-icon {
-    color: #999;
+  color: #999;
+}
+
+.user-post__content {
+  line-height: 1.6;
 }
