--- a/src/components/search/SearchBar.module.css
+++ b/src/components/search/SearchBar.module.css
@@ -2,10 +2,16 @@
   border: none;
   width: 80%;
   border-radius: 100px;
-  padding: 0.75rem;
+  padding: 0.5rem;
   font-size: 1.4rem;
   background: #141d26;
   text-align: center;
   outline: none;
   color: #fff;
+}
+
+.search-bar__open {
+  text-align: left;
+  padding-left: 2rem;
+  width: 90%;
 }
