--- a/src/components/feed/CreatePost.module.css
+++ b/src/components/feed/CreatePost.module.css
@@ -94,14 +94,19 @@ textarea::placeholder {
 .icon-container {
     display: flex;
     flex-direction: row;
-    width: 40%;
+    width: 75%;
     justify-content: space-between;
     align-items: center;
-    margin-left: 20%;
+    margin-left: 18%;
     margin-top: 5%;
 }
 
 .icon-container i {
     color:rgb(29,161,242);
     font-size: 2.20rem;
+}
+
+.icon-container .char-counter {
+    color: white;
+    font-size: 1.3rem;
 }
