user profile page and searched users profile page

--- a/src/components/auth/Auth.module.css
+++ b/src/components/auth/Auth.module.css
@@ -66,6 +66,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: #fff;
 }
 
 .user-info__button--container p {
